# ActiveInferAnts

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  active_inference_simulation.c  config.json  dot_0.md  governance.md
0_CONTEXT/Computer_Languages/: ENHANCED_FEATURES_README.md  README.md  RUN_ALL_README.md  benchmark_suite.py  config_manager.py  dependency_report.txt  master_controller.py  reporting_system.py  run_all.sh  status_dashboard.sh  test_suite.py
0_CONTEXT/Computer_Languages/Cpp/: CMakeLists.txt  README.md  run.sh
0_CONTEXT/Computer_Languages/Cpp/include/: ActiveInferenceAgent.h
0_CONTEXT/Computer_Languages/Cpp/src/: ActiveInferenceAgent.cpp  main.cpp
0_CONTEXT/Computer_Languages/Rust/: Cargo.toml  README.md  Rust.README.md  config.json  run.sh
0_CONTEXT/Computer_Languages/Rust/RustConfig/: Rust.SystemCheck.rs  Rust.config.rs  Rust.metaconfig.rs  RustMeta.rs
0_CONTEXT/Computer_Languages/Rust/RustConfig/RustWorlds/: Rust.CogSec.rs
0_CONTEXT/Computer_Languages/Rust/RustThings/: Rust.InferAnts.rs  Rust.Thing.rs  Rust.pseudo-pymdp_Ant_2.rs  Rust.pymdp_Ant_1.rs  RustFerAnt.rs
0_CONTEXT/Computer_Languages/Rust/src/: error.rs  lib.rs  main.rs
0_CONTEXT/Systems/: 003.2.md  InferAnt_Stream_002.1.md  InferAnt_Stream_003.1.md
0_CONTEXT/specs_and_prompts/: system_spec_1.txt  system_spec_2.txt  system_spec_3.txt
0_CONTEXT/system_design/: BOLTS.py  system_spec_RUST.txt
1_PREPARE/General/: CogSec.py  Coordinates.py  Cryptography.py  DigitalTwin.py  DigitalTwin_DesignProcess.py  InformationTheory.py  MatrixMethods.py  Metaphysics.py  Nesting.py  Networking.py  Pheromones.py  SaltFatAcidHeat.py
1_PREPARE/Things/: InferAnts.py  Thing.py  initialize_Nestmate_Colony.py  pseudo-pymdp_Ant_1.py  pseudo-pymdp_Ant_2.py  pymdp_Ant_1.py
1_PREPARE/Utils/: compression.py  encryption.py  hashing.py  quantum_security.py  security_base.py  security_mesh.py  security_monitor.py  security_orchestrator.py  vault_adapter.py
1_PREPARE/configs/: config.py  meta_metaconfig.py  metaconfig.py  security_policy.py
2_OPERATE/: cognitive_utilities.py  execute_Simulation.py  plan_Simulation.py  render_Simulation.py  situational_Antwareness.py
3_MEASURE/: categorization.py  poly_functor.py  specify_measure.py  statistics.py  summarize.py
4_REPORT/: execute_report.py  specify_report.py
5_FOLLOWUP/: execute_followup.py  specify_followup  specify_followup.py
6_API/: Knowledge_API.py  MetaInformAnt_API.py
9_OTHER/: clone_github_repos.py  clone_github_users.py  notebooks_to_python.py  repo_control.py  repo_security.py  ssh_clone_github_repos.py
9_OTHER/ActivityPub/: ActivityPub_CogSec.py  ActivityPub_GoFerAnts.go  ActivityPub_Nostr_Ants.py  ActivityPub_Science.py  (+3 more)
(+6721 files in other folders)
