[package]
name = "active-inference-rust"
version = "0.1.0"
edition = "2021"
authors = ["Active Inference Research"]
description = "High-performance Rust implementation of Active Inference"
license = "MIT"

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "1.0"

[features]
default = []

[[bin]]
name = "active_inference"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
